    }
  }
}
  
\section{CHANGES IN R VERSION 2.13.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \command{R CMD build} no longer attempts to preserve file
      permissions on Windows, because Windows (unlike POSIX-complant
      OSes) stops read-only files being deleted in version-control
      directories.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item Launching the PDF manuals from the Rgui menus did not work
      on some versions of Windows.
    }
  }
}
  
\section{CHANGES IN R VERSION 2.13.0}{
  \subsection{WINDOWS VERSION}{
    \itemize{
      \item Windows 2000 is no longer supported.  (It went end-of-life in
      July 2010.)
    }
  }
    
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{win_iconv} has been updated: this version has a change
      in the behaviour with BOMs on UTF-16 and UTF-32 files -- it
      removes BOMs when reading and adds them when writing.  (This is
      consistent with Microsoft applications, but Unix versions of
      \code{iconv} usually ignore them.)

      \item Support for repository type \samp{win64.binary} (used for
      64-bit Windows binaries for \R 2.11.x only) has been removed.

      \item The installers no longer put an \sQuote{Uninstall} item on
      the start menu (to conform to current Microsoft UI guidelines).

      \item Running \R always sets the environment variable \env{R_ARCH}
      (as it does on a Unix-alike from the shell-script front-end).

      \item The defaults for \code{options("browser")} and
      \code{options("pdfviewer")} are now set from environment variables
      \env{R_BROWSER} and \env{R_PDFVIEWER} respectively (as on a
      Unix-alike).  A value of \code{"false"} suppresses display (even
      if there is no \command{false.exe} present on the path).
      
      \item If \code{options("install.lock")} is set to \code{TRUE},
      binary package installs are protected against failure similar to